sf-hrms/force-app/main/default/objects/Onboarding_Task__c/fields/Assignee__c.field-meta.xml
<CustomField><fullName>Assignee__c</fullName><label>Assignee</label><type>Lookup</type><referenceTo>Employee__c</referenceTo><relationshipLabel>Assigned Onboarding Tasks</relationshipLabel><relationshipName>Assigned_Onboarding_Tasks</relationshipName></CustomField>