sf-hrms/force-app/main/default/objects/Onboarding_Task__c/fields/Completed_On__c.field-meta.xml
<CustomField><fullName>Completed_On__c</fullName><label>Completed On</label><type>Date</type></CustomField>