sf-hrms/force-app/main/default/objects/Onboarding_Task__c/fields/Employee__c.field-meta.xml
<CustomField><fullName>Employee__c</fullName><label>Employee</label><type>MasterDetail</type><referenceTo>Employee__c</referenceTo><relationshipLabel>Onboarding Tasks</relationshipLabel><relationshipName>Onboarding_Tasks</relationshipName><writeRequiresMasterRead>false</writeRequiresMasterRead><reparentableMasterDetail>false</reparentableMasterDetail></CustomField>