sf-hrms/force-app/main/default/objects/Onboarding_Task__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>Status</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Pending</fullName><default>true</default></value><value><fullName>In Progress</fullName><default>false</default></value><value><fullName>Completed</fullName><default>false</default></value><value><fullName>Skipped</fullName><default>false</default></value></valueSetDefinition></valueSet></CustomField>