sf-hrms/force-app/main/default/objects/Onboarding_Task__c/fields/Template_Task__c.field-meta.xml
<CustomField><fullName>Template_Task__c</fullName><label>Template Task</label><type>Lookup</type><referenceTo>Onboarding_Template_Task__c</referenceTo><relationshipLabel>Generated Tasks</relationshipLabel><relationshipName>Generated_Tasks</relationshipName></CustomField>